# Unify-OmniBench

./: .gitignore  README.md  eval.sh  eval_react.sh  eval_worldsense.sh  pyproject.toml  requirements-normal.txt  run.py  sitecustomize.py  start_push.sh
docs/: ADAPTERS.md  AGENT_REACT_DESIGN.md  ARCHITECTURE.md  DEBUG_NOTES_event_sequence.md  DESIGN.md  EVAL_REACT_COMPARISON.md  FUTUREOMNI_MIGRATION.md  HF_DATASET_PUBLISHING_GUIDE.md  Unify-OmniBench-v0.1.0-dev.md  eval_comparison_report.md
script/: aggregate_results.py  build_hf_parquet.py  check_completed.py  convert_daily_omni.py  convert_futureomni.py  convert_omnibench.py  convert_omnivideobench.py  convert_videomme.py  convert_worldsense.py  merge_shards.py  push_daily_omni_to_hf.py
tests/: test_adapters.py  test_bench_show.py  test_data_loading.py  test_parser.py  test_qwen2.5_omni.py  test_qwen_omni_openai.py  test_qwen_omni_transformer.py  test_qwen_omni_vllm.py  test_runner_smoke.py
unify_omnibench/: __init__.py  runner.py
unify_omnibench/agent/: __init__.py  action_parser.py  prompt.py  react_evaluator.py  tools.py  trajectory_viz.py
unify_omnibench/config/: __init__.py  agent.yaml  dataset_config.yaml  generation.yaml
unify_omnibench/core/: __init__.py  config.py  registry.py  types.py
unify_omnibench/datasets/: __init__.py  base.py  daily_omni.py  omnibench.py  omnivideobench.py  unified.py
unify_omnibench/eval/: parser.py  report.py
unify_omnibench/models/: __init__.py  base.py  echo.py
unify_omnibench/prompt/: __init__.py  media.py  templates.py
unify_omnibench/utils/: io.py  retry.py  (+3 more)
(+10 files in other folders)
